turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:12: error: missing parameter type
      case_ => setColor(Color.black);
      ^